[metadata]
name = impyrium
version = 0.1.15
author = Caden Churchman
author_email = ccaden21@gmail.com
description = A tool to setup device controls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/c3n3/impyrium
project_urls =
    Bug Tracker = https://github.com/c3n3/impyrium/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PySide6==6.9.1

[options.packages.find]
where = src
